--- a/style.css
+++ b/style.css
@@ -1,3 +1,13 @@
 .menu {
-    
+    background-color: rgb(247, 228, 201);
+    padding: 40px;
+    text-decoration: none;
+}
+
+.menu-logo {
+    font-size: 40px;
+}
+
+.menu-link {
+    font-size: 25px;
 }
