--- a/css/style.css
+++ b/css/style.css
@@ -58,7 +58,10 @@ main {
 }
 
 .slide-content {
-    margin: 0px 40px;   
+    margin: 0px 40px;  
+    background-color: rgb(67, 13, 121);
+    overflow: hidden;
+    border-radius: 25px;
 }
 
 .card {
@@ -150,5 +153,37 @@ main {
 }
 
 .button:hover {
-    background: #265DF2;
+    background: #0032bb;
+}
+
+.swiper-navBtn {
+    color: #6E93F7;
+    transition: color 0.3s ease;
+}
+
+.swiper-navBtn:hover {
+    color: #4070F4;
+}
+
+.swiper-navBtn::before,
+.swiper-navBtn::after {
+    font-size: 40px;
+}
+
+.swiper-navBtn-next {
+    right: 0;
+}
+
+.swiper-navBtn-prev {
+    left: 0;
+}
+
+@media screen and (max-width: 768px) {
+    .slide-content {
+        margin: 0 10px;
+    }
+    .swiper-navBtn {
+        display: none;
+    }
+
 }
