--- a/css/style.css
+++ b/css/style.css
@@ -37,11 +37,10 @@ main {
 }
 
 * {  
-  box-sizing: border-box;
-}
-
-.prototipo1-conteiner,
-.prototipo2-conteiner {
+    box-sizing: border-box;
+  }
+  
+.prototipo1-conteiner {
     min-height: 100vh;
     display: flex;
     align-items: center;
@@ -50,140 +49,83 @@ main {
     margin-top: 10rem;
 }
 
-.slide-container {
+.slide-container{
     max-width: 1120px;
     width: 100%;
-    background-color: grey;
     padding: 40px 0;
 }
 
-.slide-content {
-    margin: 0px 40px;  
-    background-color: rgb(67, 13, 121);
+.slide-content{
+    margin: 0 40px;
     overflow: hidden;
-    border-radius: 25px;
+    border-radius: 0 25px 0 25px;
 }
-
-.card {
+.card{
     border-radius: 25px;
     background-color: #FFF;
-    ;
 }
-
 .image-content,
-.card-content {
+.card-content{
     display: flex;
     flex-direction: column;
     align-items: center;
     padding: 10px 14px;
 }
-
-.image-content {
+.image-content{
     position: relative;
-    row-gap: 5px;  
-    padding: 25px 0;  
+    row-gap: 5px;
+    padding: 25px 0;
 }
-
-.overlay {
+.overlay{
     position: absolute;
     left: 0;
     top: 0;
     height: 100%;
     width: 100%;
-    background-color: #4070F4;
-    border-radius: 25px 25px 0 25px;
+    background-color: rgba(111, 105, 148, 1);
 }
 
-.overlay::before,
-.overlay::after {
-    content: '';
-    position: absolute;
-    right: 0px;
-    bottom: -40px;
-    height: 40px;
-    width: 40px;
-    background-color: #4070F4;
-}
 
-.overlay::after {
-    border-radius: 0 25px 0 0;
-    background-color: #FFF;
-
-}
-
-.card-image {
+.card-image{
     position: relative;
     height: 150px;
     width: 150px;
-    border-radius: 50%;
-    background: #FFF;
-    padding: 3px;
 }
-
-.card-image .card-img {
+.card-image .card-img{
     height: 100%;
     width: 100%;
     object-fit: cover;
-    border-radius: 50%;
-    border: 4px solid #4070f4;
 }
 
-.name {
-    font-size: 18px;
-    font-weight: 500;
-    color: #333;
-}
-
-.description {
+.description{
     font-size: 14px;
     color: #707070;
-    text-align: center;
+    text-align: unset;
 }
 
-.button {
-    border: none;
-    font-size: 16px;
-    color: #FFF;
-    padding: 8px 16px;
-    background-color: #4070F4;
-    border-radius: 6px;
-    margin: 14px;
-    cursor: pointer;
-    transition: all 0.3s ease;
-}
-
-.button:hover {
-    background: #0032bb;
-}
-
-.swiper-navBtn {
-    color: #6E93F7;
+.swiper-navBtn{
+    color: #6E93f7;
     transition: color 0.3s ease;
 }
-
-.swiper-navBtn:hover {
+.swiper-navBtn:hover{
     color: #4070F4;
 }
-
 .swiper-navBtn::before,
-.swiper-navBtn::after {
-    font-size: 40px;
+.swiper-navBtn::after{
+    font-size: 35px;
 }
-
-.swiper-navBtn-next {
+.swiper-button-next{
     right: 0;
 }
-
-.swiper-navBtn-prev {
+.swiper-button-prev{
     left: 0;
 }
 
 @media screen and (max-width: 768px) {
-    .slide-content {
+    .slide-content{
         margin: 0 10px;
     }
-    .swiper-navBtn {
+    .swiper-navBtn{
         display: none;
     }
-
 }
